# Zion-2.8

./: .env.example  .env.production  .gitignore  .pids_local  AMD_RX5600_DRIVER_GUIDE.md  CHANGELOG.md  COSMIC_HARMONY_CHANGELOG.md  COSMIC_HARMONY_MINING_QUICK_START.md  DEPLOYMENT_GUIDE_2.8.2.md  DEPLOYMENT_SUMMARY_2.8.2.md  DEPLOY_2.8.2_COMPLETE.sh  DEPLOY_SSH_REMOTE.sh  DISK_EXPANSION_GUIDE.md  Dashboard.py  FINAL_DEPLOYMENT_STATUS_2.8.1.md  HOTOVO.txt  OPERATIONAL_REPORT_2025-10-24.md  PROJECT_REORGANIZATION_SUMMARY.md  PROJECT_STRUCTURE_v2.8.md  README.md  REALTIME_MINING_README.md  RELEASE_NOTES_v2.8.1.md  ROADMAP.md  ROADMAP_v2.9.0.md  ROOT_STRUCTURE.md  Readme.md  Readme2.8.1.md  SESSION_REPORT_2025-10-23.md  STRUCTURE.md  WIKI_COMPLETION_SUMMARY.md  ZION_2.8.0_COMPLETION_SUMMARY.md  ZION_2.8.1_FRONTEND_UPDATE.md  ZION_2.8_COMPLETE_ROADMAP.md  ZION_COSMIC_MAP_V2_COMPLETE.md  ai_orchestrator_backend.py  backup_ssh_full.sh  blockchain_rpc_client.py  build_all_libraries.sh  consciousness_game.db-shm  consciousness_mining_game.py  (+79 more)
.web-temp/: pool_events_live.html  round_table_dashboard.html
2.8.3/: PHASE_11_COMPLETE.md
ai/: README.md  README_UNIVERSAL_MINER.md  ai_orchestrator.py  ai_pool_orchestrator.py  ai_warp_engine.py  autolykos_v2.py  consciousness_mining_ai.py  pool_stratum_bridge.py  requirements-ai.txt  start_ai_orchestrator.sh  stop_ai_orchestrator.sh  stratum_client.py  stratum_client_sync.py  (+4 more)
zqal-sdk/zqalc/: Cargo.toml  README.md  test_init.zqal
zqal-sdk/zqalc/src/: ast.rs  codegen.rs  main.rs  parser.rs  rize_core.rs  type_checker.rs
(+546 files in other folders)
