[package]
name = "zqalc"
version = "0.1.0"
edition = "2021"
authors = ["ZION Contributors"]
description = "Minimal CLI for ZQAL - parse & basic checks"
license = "MIT"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
anyhow = "1"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
