[package]
name = "zqalc"
version = "0.2.0"
edition = "2021"
authors = ["ZION Contributors"]
description = "Extended CLI for ZQAL v0.2.0 - Quantum & Tone Integration"
license = "MIT"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
anyhow = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
